# USTC_CG_HW

Framework2D/: .clang-format  CMakeLists.txt  python_structure.py
Framework2D/include/common/: debug_assert.h  debug_utils.h  image.h  image_widget.h  runtime_assert.h
Framework2D/src/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: canvas_widget.cpp  canvas_widget.h  main.cpp  minidraw_window.cpp  minidraw_window.h
Framework2D/src/assignments/1_MiniDraw/shapes/: ellipse.cpp  ellipse.h  polygon.cpp  polygon.h
Framework2D/src/assignments/2_ImageWarping/: CMakeLists.txt  warping_widget.cpp
Framework2D/src/assignments/2_ImageWarping/warper/: IDW_warper.cpp  IDW_warper.h  RBF_warper.cpp  RBF_warper.h  warper.cpp  warper.h
Framework2D/src/assignments/3_PoissonImageEditing/: CMakeLists.txt  main.cpp  poisson_window.cpp  seamless_clone.cpp  seamless_clone.h  target_image_widget.cpp
Framework2D/src/common/: CMakeLists.txt
Framework2D/src/demo/: CMakeLists.txt
Homeworks/0_cpp_warmup/: .gitignore
Homeworks/0_cpp_warmup/project/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/include/: PolynomialList.h  PolynomialMap.h
Homeworks/0_cpp_warmup/project/src/executables/1_BasicDArray/: DArray.cpp  DArray.h
Homeworks/0_cpp_warmup/project/src/executables/2_EfficientDArray/: DArray.cpp  DArray.h
Homeworks/0_cpp_warmup/project/src/executables/3_TemplateDArray/: TemplateDArray.h  TemplateDArray.inl  main.cpp
Homeworks/0_cpp_warmup/project/src/executables/4_list_Polynomial/: CMakeLists.txt
Homeworks/0_cpp_warmup/project/src/libraries/shared/: CMakeLists.txt  PolynomialList.cpp
Homeworks/0_cpp_warmup/project/src/libraries/static/: PolynomialMap.cpp
Homeworks/0_cpp_warmup/samples/: CMakeLists.txt
